--- a/plugin-binary/Cargo.toml
+++ b/plugin-binary/Cargo.toml
@@ -1,6 +1,10 @@
 [package]
-name = "wrapper-binary"
+name = "plugin-binary"
 version = "0.1.0"
 edition.workspace = true
+
+[[bin]]
+name = "plugin"
+path = "src/main.rs"
 
 [dependencies]
